--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,5 +85,5 @@ jobs:
         with:
           configPath: ./lighthouserc.json
           budgetPath: ./budget.json
-          uploadArtifacts: true
+          uploadArtifacts: false
           temporaryPublicStorage: true
